# ComfyUI-NG

./: .gitignore  LOCAL_LOADER_NOTES.md  MODEL_LOADER.md  README.md  RECOVERY_NOTES.md  V0.4_FIXES.md  pyproject.toml  requirements.txt
config/: default.yaml
docs/: SPECIFICATION.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
migrations/: 0001_initial.sql
plugins/flux/: README.md  ng-node.toml  pyproject.toml
plugins/flux/schemas/: model_inspect.input.json  model_inspect.output.json  model_load.input.json  model_load.output.json  model_unload.input.json  model_unload.output.json  sample_flux.input.json  sample_flux.output.json  text_encoder_load.input.json  text_encoder_load.output.json  vae_load.input.json  vae_load.output.json
plugins/flux/src/comfyng_flux/: __init__.py  runtime.py
runtimes/conditioning/: ng-node.toml
runtimes/control/: ng-node.toml
runtimes/images/: ng-node.toml
runtimes/latents/: ng-node.toml
runtimes/lora/: ng-node.toml
runtimes/models/: ng-node.toml
runtimes/sampling/: ng-node.toml
runtimes/system/: ng-node.toml
schemas/nodes/: conditioning_combine.input.json  conditioning_combine.output.json  conditioning_guidance.input.json  conditioning_guidance.output.json  conditioning_mask.input.json  conditioning_mask.output.json  conditioning_prompt_encode.input.json  conditioning_prompt_encode.output.json  control_collect.input.json  control_collect.output.json  control_compare.input.json  control_compare.output.json  control_for_each.input.json  control_for_each.output.json  control_merge.input.json  control_merge.output.json  control_route.input.json  control_route.output.json  control_subgraph_input.input.json  control_subgraph_input.output.json  control_subgraph_output.input.json  control_subgraph_output.output.json  control_switch.input.json  control_switch.output.json  image_crop.input.json  image_crop.output.json  image_load.input.json  image_load.output.json  image_metadata.input.json  image_metadata.output.json  image_preview.input.json  image_preview.output.json  image_resize.input.json  image_resize.output.json  image_save.input.json  image_save.output.json  latent_blend.input.json  latent_blend.output.json  latent_empty.input.json  latent_empty.output.json  (+40 more)
scratch/: get_ckpt_options.py  test_job_submit.py  test_lifespan.py  test_local_comfyui.py  test_scheduler.py  test_ws.py
src/comfyng/: __init__.py
tests/: test_native_dispatcher_contract.py  test_native_local_loader.py
tests/architecture/: test_core_imports.py
tests/integration/: test_atomic_model_import.py  test_cancellation.py  test_database_concurrency.py  test_hardware_probe.py  test_job_lifecycle.py
tests/property/: test_graphs.py
tests/unit/: test_capabilities.py  test_config.py  test_database.py  test_manifests.py  test_node_catalogue.py
(+114 files in other folders)
