[build-system]
requires = ["hatchling>=1.28,<2"]
build-backend = "hatchling.build"

[project]
name = "comfyui-ng"
version = "0.1.0"
description = "A typed, local-first control plane for modern image-generation workflows."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = [
  "aiosqlite>=0.22,<1",
  "fastapi>=0.116,<1",
  "jsonschema>=4.23,<5",
  "msgspec>=0.18,<0.19",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.10,<3",
  "PyYAML>=6.0.2,<7",
  "typer>=0.16,<1",
]

[project.optional-dependencies]
ml = [
  "torch>=2.10",
  "diffusers>=0.39",
  "transformers>=5",
  "accelerate>=1.10",
  "safetensors>=0.6",
  "sentencepiece>=0.2",
  "protobuf>=5",
  "peft>=0.17",
]
dev = [
  "build>=1.3,<2",
  "hypothesis>=6.135,<7",
  "pytest>=9,<10",
]

[project.scripts]
comfyng = "comfyng.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/comfyng"]

[tool.hatch.build.targets.wheel.force-include]
"config/default.yaml" = "comfyng/config/default.yaml"
"migrations" = "comfyng/database/migrations"
"runtimes" = "comfyng/catalogue/runtimes"
"schemas" = "comfyng/catalogue/schemas"

[tool.pytest.ini_options]
testpaths = ["tests"]
