[build-system]
requires = ["hatchling>=1.28,<2"]
build-backend = "hatchling.build"

[project]
name = "comfyng-flux"
version = "1.0.0"
description = "FLUX.1 runtime for ComfyUI-NG"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0-or-later"}
dependencies = [
    "torch>=2.0",
    "transformers>=4.48,<5",
    "diffusers>=0.33,<1",
    "accelerate>=1.3,<2",
    "safetensors>=0.5,<1",
    "pillow>=11,<12",
    "numpy>=1.26,<2",
]
[project.optional-dependencies]
cuda = ["torch[cuda]"]

[project.entry-points."comfyng.runtime"]
flux = "comfyng_flux.runtime:create_runtime"

[tool.hatch.build.targets.wheel]
packages = ["src/comfyng_flux"]